@@ -90,6 +90,10 @@
 #include <inttypes.h>
 #endif
 
+#ifdef HAVE_LOCALE_H
+#include <locale.h>
+#endif
+
 #include "snprintf.h"
 
 #define FALSE           0
@@ -194,6 +198,8 @@ static void xbuf_format_converter(smart_str *xbuf, const char *fmt, va_list ap)
 
 	char num_buf[NUM_BUF_SIZE];
 	char char_buf[2];			/* for printing %% and %<unknown> */
+
+	struct lconv *lconv = NULL;
 
 	/*
 	 * Flag variables
@@ -527,6 +533,7 @@ static void xbuf_format_converter(smart_str *xbuf, const char *fmt, va_list ap)
 
 
 				case 'f':
+				case 'F':
 				case 'e':
 				case 'E':
 					switch(modifier) {
@@ -547,8 +554,12 @@ static void xbuf_format_converter(smart_str *xbuf, const char *fmt, va_list ap)
 						s = "inf";
 						s_len = 3;
 					} else {
-						s = ap_php_conv_fp(*fmt, fp_num, alternate_form,
+						if (!lconv) {
+							lconv = localeconv();
+						}
+						s = php_conv_fp((*fmt == 'f')?'F':*fmt, fp_num, alternate_form,
 						 (adjust_precision == NO) ? FLOAT_DIGITS : precision,
+						 (*fmt == 'f')?(*lconv->decimal_point):'.',
 									&is_negative, &num_buf[1], &s_len);
 						if (is_negative)
 							prefix_char = '-';
@@ -595,7 +606,10 @@ static void xbuf_format_converter(smart_str *xbuf, const char *fmt, va_list ap)
 					/*
 					 * * We use &num_buf[ 1 ], so that we have room for the sign
 					 */
-					s = bsd_gcvt(fp_num, precision, &num_buf[1]);
+					if (!lconv) {
+						lconv = localeconv();
+					}
+					s = php_gcvt(fp_num, precision, *lconv->decimal_point, (*fmt == 'G')?'E':'e', &num_buf[1]);
 					if (*s == '-')
 						prefix_char = *s++;
 					else if (print_sign)
@@ -607,8 +621,6 @@ static void xbuf_format_converter(smart_str *xbuf, const char *fmt, va_list ap)
 
 					if (alternate_form && (q = strchr(s, '.')) == NULL)
 						s[s_len++] = '.';
-					if (*fmt == 'G' && (q = strchr(s, 'e')) != NULL)
-						*q = 'E';
 					break;
 
 
